--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,10 @@ jobs:
           cmake ..
           make
           make test
-
-            Test_Add:
+  Test_Add:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
       - name: Test fonction add
         run: |
           last_directory=$(basename ${{ runner.workspace }})
