--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -83,7 +83,7 @@ jobs:
           cd build
           cmake ..
           make
-          ./src/calculator carre 10 5
+          ./src/calculator carre 5
   Deploy:
     runs-on: ubuntu-latest
     needs: 
